chore: gemini-app-button

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,18 @@
     "react": "^17.0.2",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6",
-    "@griffel/react": "1.5.14"
+    "tailwind-config": "workspace:*"
+  },
+  "peerDependencies": {
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6"
+  },
+  "dependencies": {
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "1.14.0",
+    "@radix-ui/react-tooltip": "1.0.6"
   }
 }
