--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,11 @@
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "tailwind-config": "workspace:*",
+    "tailwindcss-animate": "^1.0.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
@@ -22,6 +26,8 @@
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6",
     "jest-config": "workspace:*",
-    "@griffel/react": "1.5.14"
+    "prettier": "^3.0.2",
+    "tailwindcss": "3.3.2",
+    "autoprefixer": "^10.4.15"
   }
 }
