--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "1.14.0",
-    "@radix-ui/react-tooltip": "1.0.6"
+    "@radix-ui/react-tooltip": "1.0.6",
+    "@radix-ui/react-tabs": "1.0.4"
   }
 }
