--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,8 @@
     "react": "workspace:*",
     "react-dom": "workspace:*",
     "ui": "workspace:*",
-    "@fluentui/react-components": "^9.30.0"
+    "@fluentui/react-components": "^9.30.0",
+    "next-auth": "4.23.1"
   },
   "devDependencies": {
     "@types/node": "20.5.7",
