--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,14 @@
     "react-dom": "workspace:*",
     "ui": "workspace:*",
     "@fluentui/react-components": "^9.30.0",
-    "next-auth": "4.23.1"
+    "next-auth": "4.23.1",
+    "@prisma/client": "5.2.0",
+    "@auth/prisma-adapter": "1.0.2",
+    "prisma": "5.2.0",
+    "zod": "3.22.2",
+    "react-hook-form": "7.46.1",
+    "@hookform/resolvers": "3.3.1",
+    "bcrypt": "5.1.1"
   },
   "devDependencies": {
     "@types/node": "20.5.7",
@@ -23,6 +30,7 @@
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6",
-    "jest-config": "workspace:*"
+    "jest-config": "workspace:*",
+    "@types/bcrypt": "5.0.0"
   }
 }
